GET /api/v1/competitions/:id/cavaliers
